# endfield-lily

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  start.cmd  start.mjs  start.ps1  start.sh
backend/: README.md  pyproject.toml  requirements.txt
backend/app/: __init__.py  log_util.py  main.py
backend/app/assets/: materials.json  materials.labeled.json  operators.json  operators.labeled.json  weapons.json  weapons.labeled.json
backend/app/pipelines/: edge_lattice.py  grid_detect.py  ocr.py  preprocess.py  template_match.py
backend/app/routes/: dev.py  inventory.py  operators.py  state.py  weapons.py
backend/scripts/: benchmark_ocr.py  debug_weapons_ocr.py
backend/tests/: test_dev_endpoint.py  test_grid_detect.py  test_health.py  test_inventory_endpoint.py  test_log_util.py  test_ocr.py  test_operators_endpoint.py  test_preprocess.py  test_state_endpoint.py  test_template_match.py  test_weapons_endpoint.py
backend/tests/fixtures/: build_inventory_fixture.py  build_operators_fixture.py  synthetic_grid.py
docs/: CHANGELOG.md
docs/research/: 2026-04-17-data-source-audit.md
docs/superpowers/plans/: 2026-04-17-plan-a-planner-frontend.md  (+1 more)
frontend/: .gitignore  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
frontend/scripts/: port-data.mjs  port-from-endwiki.mjs
frontend/src/: App.tsx  index.css
frontend/src/api/: recognition.ts
label-tool/: README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.app.json  tsconfig.node.json
label-tool/src/: App.tsx  index.css
scripts/: import-maa-icons.py
(+68 files in other folders)
